--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-router-dom": "^4.2.4",
     "@types/react-router-redux": "^5.0.12",
     "@types/redux": "^3.6.0",
+    "classnames": "^2.2.6",
     "history": "^4.7.2",
     "lodash.throttle": "^4.1.1",
     "react": "^16.2.0",
